--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
     "@react-three/gltfjsx": "^4.3.4",
+    "@react-three/xr": "^6.6.26",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "styled-jsx": "^5.1.7",
     "three": "^0.180.0"
   },
   "devDependencies": {
